checker/tests/parsing/errors/trait_missing_name.mft
trait {}
=== error ===
Unrecognized token `{` found at 6:7
Expected one of "identifier"